# sdgolf-monitor

./: .gitignore  README.md  config.yaml  pyproject.toml  worker.js  wrangler.jsonc
.github/workflows/: deploy.yml  monitor.yml  pages.yml  probe-cps.yml  test-email.yml
configs/: Memorial Day Balboa.yaml  Memorial Day.yaml  Torrey Weekend Times.yaml  Week of Weekend Foursomes.yaml  Weekends.yaml  balboa-18-weekend-foursomes.yaml  balboa-18-weekends.yaml  balboa-9-evenings.yaml  encinitas-resale.yaml  test.yaml  torrey-north-weekend-foursomes.yaml  torrey-south-weekend-foursomes.yaml
docs/: sms-notifications-plan.md
functions/api/: snapshot.js
scripts/: migrate_configs_to_kv.py
src/sdgolf_monitor/: autobook.py  client.py  discover.py  filter.py  golfdistrict.py  main.py  notify.py  runner.py  state.py  teeitup.py  webtrac.py
state/: balboa-18-weekends.json  balboa-9-evenings.json
tests/: test_client.py  test_filter.py  test_golfdistrict.py  test_notify.py  test_runner.py  test_teeitup.py  test_webtrac.py
ui/: app.js  index.html  privacy.html  schema.js  sms-optin.html  style.css
